yanl/examples/t1/correct/0501_real_implicit_int_cast.yanl
program me;
var x:real;
begin
x:=100
end.