yanl/examples/t1/fail/0206_array_of_array.yanl
program array_of_array;
var x:array[1..2]of array[2..4] of int;
begin
end.